Add client docs and fix a bug in profile manager with macros

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,8 @@
     "version": "0.1.0",
     "command": "tsc",
     "isShellCommand": true,
-    "args": ["-p", "."],
+    "args": ["-p", ".", "--listEmittedFiles"],
     "showOutput": "always",
-    "problemMatcher": "$tsc"
+    "problemMatcher": "$tsc",
+    "listEmittedFiles": true
 }
