--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "electron .",
     "dev": "electron . --debug",
     "clean:dist": "rm -rf ./dist",
+    "compile": "npm run sass && tsc -p . --listEmittedFiles",
     "build": "npm run build:win && npm run build:linux",
     "build:osx": "electron-packager . %npm_package_productName% --out=dist --ignore=\"^/(dist|.vscode|_raw|_bak|src|_test)$\" --overwrite --prune --asar --arch=all --platform=darwin --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/mac/app.icns",
     "build:win": "electron-packager . %npm_package_productName% --out=dist --arch=all --platform=win32 --ignore=\"^/(dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/win/app.ico",
@@ -42,16 +43,16 @@
     "min": "./node_modules/.bin/babili --minified src/js -d build/js",
     "rebuild-win": ".\\node_modules\\.bin\\electron-rebuild.cmd",
     "rebuild-linux": "./node_modules/.bin/electron-rebuild",
-    "sass":"node-sass src/css/ -o build/css/ --output-style compressed"
+    "sass": "node-sass src/css/ -o build/css/ --output-style compressed"
   },
   "devDependencies": {
-    "@types/electron": "^1.4.32",
-    "@types/jquery": "^2.0.40",
-    "@types/node": "^7.0.13",
+    "@types/electron": "^1.4.37",
+    "@types/jquery": "^2.0.42",
+    "@types/node": "^7.0.16",
     "babel-cli": "^6.24.1",
     "babili": "0.0.12",
     "devtron": "^1.4.0",
-    "electron": "^1.6.7",
+    "electron": "^1.6.8",
     "electron-builder": "^17.1.1",
     "electron-installer-dmg": "^0.2.1",
     "electron-packager": "^8.6.0",
