Add generated js and css to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,29 @@ npm-debug.log
 typings/
 .idea/
 src/js/
+/build/js/logging.js
+/build/js/mapper.js
+/build/js/msp.js
+/build/js/parser.js
+/build/js/profile.js
+/build/js/profile.ui.js
+/build/js/settings.js
+/build/js/status.js
+/build/js/telnet.js
+/build/js/test.js
+/build/js/ansi.js
+/build/js/backup.js
+/build/js/client.js
+/build/js/input.js
+/build/js/jquery.ext.js
+/build/js/library.js
+/build/css/editor.css
+/build/css/editorcontent.css
+/build/css/form.css
+/build/css/main.css
+/build/css/mapper.css
+/build/css/monsters.css
+/build/css/profiles.css
+/build/css/status.css
+/build/css/ansi.css
+/build/css/button.css
