--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "electron .",
     "dev": "electron . --debug",
     "clean:dist": "rm -rf ./dist",
-    "compile": "npm run sass && tsc -p . --listEmittedFiles",
+    "compile": "npm run sass && tsc -p . --listEmittedFiles && npm run min",
     "build": "npm run build:win && npm run build:linux",
     "build:osx": "electron-packager . %npm_package_productName% --out=dist --ignore=\"^/(dist|.vscode|_raw|_bak|src|_test)$\" --overwrite --prune --asar --arch=all --platform=darwin --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/mac/app.icns",
     "build:win": "electron-packager . %npm_package_productName% --out=dist --arch=all --platform=win32 --ignore=\"^/(dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/win/app.ico",
