Add always on top systems for mapper

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,8 @@
     ],
     "taskButtons.buttons": [
         {
-            "task": "tsc",
-            "buttonLabel": "TypeScript"
+            "task": "compile",
+            "buttonLabel": "Compile"
         }
     ],
     "search.exclude": {
