--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "description": "MUD client coded in javascript.",
   "author": "Icewolfz",
   "electronVersion": "1.6.7",
-  "email": "none@rightnow.com",
+  "email": "icewolfz@users.noreply.github.com",
   "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/icewolfz/jiMUD.git"
+  },
+  "private": true,
   "scripts": {
     "start": "electron .",
-    "dev": "electron . --debug",
+    "debug": "electron . --debug",
     "clean:dist": "rm -rf ./dist",
     "compile": "npm run sass && tsc -p . --listEmittedFiles && npm run min",
     "build": "npm run build:win && npm run build:linux",
@@ -31,6 +36,7 @@
     "package:winportable64": "node_modules/.bin/build --pd=dist/jiMUD-win32-x64/ --win portable:x64 && ren \"dist\\jiMUD %npm_package_version%.exe\" jiMUD_%npm_package_version%_Windows_portable-x64.exe",
     "package:winportable32": "node_modules/.bin/build --pd=dist/jiMUD-win32-ia32/ --win portable:ia32 && ren \"dist\\jiMUD %npm_package_version%.exe\" jiMUD_%npm_package_version%_Windows_portable-x32.exe",
     "package:osx": "hdiutil create -format UDZO -srcfolder dist/jiMUD-darwin-x64/jiMUD.app dist/jiMUD_Mac.dmg",
+    "package:linuxall": "package:linuxx && package:linux-other",
     "package:linux": "cd dist/ && tar -jcvf jiMUD_${npm_package_version}_Linux_x64.tar.bz2 jiMUD-linux-x64 && tar -jcvf jiMUD_${npm_package_version}_Linux_ia32.tar.bz2 jiMUD-linux-ia32 && tar -jcvf jiMUD_${npm_package_version}_Linux_armv7l.tar.bz2 jiMUD-linux-armv7l && cd ../",
     "package:linuxx": "cd dist/ && tar -Jcvf jiMUD_${npm_package_version}_Linux_x64.tar.xz jiMUD-linux-x64 && tar -Jcvf jiMUD_${npm_package_version}_Linux_ia32.tar.xz jiMUD-linux-ia32 && tar -Jcvf jiMUD_${npm_package_version}_Linux_armv7l.tar.xz jiMUD-linux-armv7l && cd ../",
     "package:linuxwin": "cd dist && \"C:\\Program Files\\7-Zip\\7z.exe\" a -r -mx9 jiMUD_%npm_package_version%_Linux_x64.7z jiMUD-linux-x64 && \"C:\\Program Files\\7-Zip\\7z.exe\" a -r -mx9 jiMUD_%npm_package_version%_Linux_ia32.7z jiMUD-linux-ia32 && \"C:\\Program Files\\7-Zip\\7z.exe\" a -r -mx9 jiMUD_%npm_package_version%_Linux_armv7l.7z jiMUD-linux-armv7l && cd ../",
@@ -38,8 +44,6 @@
     "package:linux-other32": "build --pd=dist/jiMUD-linux-ia32/ --l deb AppImage rpm --ia32",
     "package:linux-other64": "build --pd=dist/jiMUD-linux-x64/ --l deb AppImage rpm --x64",
     "package:linux-otherarm": "build --pd=dist/jiMUD-linux-armv7l/ --l deb AppImage rpm --armv7l",
-    "test": "npm run lint",
-    "lint": "standard",
     "min": "./node_modules/.bin/babili --minified src/js -d build/js",
     "rebuild-win": ".\\node_modules\\.bin\\electron-rebuild.cmd",
     "rebuild-linux": "./node_modules/.bin/electron-rebuild",
