Minor updates and preperation for undo/redo for profile manager with new state tracking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,9 @@
         "**/_bak":true,
         "**/_raw":true,
         "**/_test":true,
-        "**/lib":true
+        "**/lib":true,
+        "**/build/css":true,
+        "**/build/js":true,
+        "**/src/js":true
     }
 }
