--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/electron": "^1.4.37",
     "@types/jquery": "^2.0.42",
     "@types/node": "^7.0.16",
+    "accessibility-developer-tools": "^2.12.0",
     "babel-cli": "^6.24.1",
     "babili": "0.0.12",
     "devtron": "^1.4.0",
@@ -80,11 +81,11 @@
   },
   "dependencies": {
     "buzz": "^1.2.0",
+    "electron-prebuilt": "^1.4.13",
     "jquery": "^3.1.1",
     "lz-string": "^1.4.4",
     "menubar": "^5.2.0",
     "rgbcolor": "^1.0.0",
-    "sqlite3": "^3.1.8",
-    "trash": "^4.0.1"
+    "sqlite3": "^3.1.8"
   }
 }
