--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "website": "https://github.com/icewolfz/jiMUD",
   "homepage": "https://github.com/icewolfz/jiMUD",
   "url": "https://github.com/icewolfz/jiMUD/issues",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "main": "build/main.js",
   "description": "MUD client coded in javascript.",
   "author": "Icewolfz",
-  "electronVersion": "1.6.7",
+  "electronVersion": "1.7.0",
   "email": "icewolfz@users.noreply.github.com",
   "license": "UNLICENSED",
   "repository": {
@@ -45,7 +45,7 @@
     "package:linux-other64": "build --pd=dist/jiMUD-linux-x64/ --l deb AppImage rpm --x64",
     "package:linux-otherarm": "build --pd=dist/jiMUD-linux-armv7l/ --l deb AppImage rpm --armv7l",
     "min": "./node_modules/.bin/babili --minified out -d build/js",
-    "rebuild:win": ".\\node_modules\\.bin\\electron-rebuild.cmd",
+    "rebuild:win": "./node_modules/.bin/electron-rebuild -w sqlite3 -p",
     "rebuild:linux": "./node_modules/.bin/electron-rebuild",
     "sass": "node-sass src/css/ -o build/css/ --output-style compressed"
   },
@@ -57,7 +57,7 @@
     "babel-cli": "^6.24.1",
     "babili": "0.0.12",
     "devtron": "^1.4.0",
-    "electron": "^1.6.8",
+    "electron": "^1.7.0",
     "electron-builder": "^17.3.1",
     "electron-installer-dmg": "^0.2.1",
     "electron-packager": "^8.7.0",
