--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "private": true,
   "scripts": {
     "start": "electron .",
-    "debug": "electron . --debug",
+    "debug": "electron . -d",
     "clean:dist": "rm -rf ./dist",
     "compile": "npm run sass && tsc -p . --listEmittedFiles && npm run min && echo Compile Done",
     "build": "npm run build:win && npm run build:linux",
