--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,8 @@
     ],
     "include": [
         "./src/**/*.ts"
+    ],
+    "files": [
+        "node_modules/@types/electron/index.d.ts"
     ]
 }
