--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "lz-string": "^1.4.4",
     "menubar": "^5.2.0",
     "rgbcolor": "^1.0.0",
+    "spellchecker": "^3.3.1",
     "sqlite3": "^3.1.8"
   }
 }
