Create new app icons

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jimud",
   "productName": "jiMUD",
-  "icon": "./assets/icons/png/app.png",
+  "icon": "./assets/icons/png/64x64.png",
   "website": "https://github.com/icewolfz/jiMUD",
   "homepage": "https://github.com/icewolfz/jiMUD",
   "url": "https://github.com/icewolfz/jiMUD/issues",
@@ -25,8 +25,8 @@
     "build": "npm run build:win && npm run build:linux",
     "build:osx": "electron-packager . %npm_package_productName% --out=dist --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --overwrite --prune --asar --arch=all --platform=darwin --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/mac/app.icns",
     "build:win": "electron-packager . %npm_package_productName% --out=dist --arch=all --platform=win32 --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/win/app.ico",
-    "build:linux": "electron-packager . $npm_package_productName --out=dist --arch=all --platform=linux --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=$npm_package_electronVersion --app-version=$npm_package_version --icon=./assets/icons/png/app.png",
-    "build:linuxwin": "electron-packager . %npm_package_productName% --out=dist --arch=all --platform=linux --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/png/app.png",
+    "build:linux": "electron-packager . $npm_package_productName --out=dist --arch=all --platform=linux --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=$npm_package_electronVersion --app-version=$npm_package_version --icon=./assets/icons/png/64x64.png",
+    "build:linuxwin": "electron-packager . %npm_package_productName% --out=dist --arch=all --platform=linux --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/png/64x64.png",
     "package": "npm run package:winall && npm run package:linux",
     "package:winall": "npm run package:win && npm run package:winportable",
     "package:win": "npm run package:win32 && npm run package:win64",
