fix app icons for linux

--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
       "installerIcon": "./assets/icons/win/app.ico"
     },
     "linux": {
-      "maintainer": "icewolfz"
+      "maintainer": "icewolfz",
+      "icon":"./assets/icons/png/"
     }
   },
   "dependencies": {
