--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "website": "https://github.com/icewolfz/jiMUD",
   "homepage": "https://github.com/icewolfz/jiMUD",
   "url": "https://github.com/icewolfz/jiMUD/issues",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "main": "build/main.js",
   "description": "MUD client coded in javascript.",
   "author": "Icewolfz",
@@ -45,7 +45,7 @@
     "package:linux-other64": "build --pd=dist/jiMUD-linux-x64/ --l deb AppImage rpm --x64",
     "package:linux-otherarm": "build --pd=dist/jiMUD-linux-armv7l/ --l deb AppImage rpm --armv7l",
     "min": "./node_modules/.bin/babili --minified out -d build/js",
-    "rebuild:win": "./node_modules/.bin/electron-rebuild -w sqlite3 -p",
+    "rebuild:win": "./node_modules/.bin/electron-rebuild -w sqlite3 -p && ./node_modules/.bin/electron-rebuild -w sqlite3 -p -a=ia32",
     "rebuild:linux": "./node_modules/.bin/electron-rebuild",
     "sass": "node-sass src/css/ -o build/css/ --output-style compressed",
     "compile:themes": "node-sass src/themes/ -o build/themes/ --output-style compressed"
