--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "website": "https://github.com/icewolfz/jiMUD",
   "homepage": "https://github.com/icewolfz/jiMUD",
   "url": "https://github.com/icewolfz/jiMUD/issues",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "main": "build/main.js",
   "description": "MUD client coded in javascript.",
   "author": "Icewolfz",
@@ -24,7 +24,8 @@
     "compile": "npm run sass && npm run compile:themes && tsc -p . --listEmittedFiles && npm run min && echo Compile Done",
     "build": "npm run build:win && npm run build:linux",
     "build:osx": "electron-packager . %npm_package_productName% --out=dist --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --overwrite --prune --asar --arch=all --platform=darwin --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/mac/app.icns",
-    "build:win": "electron-packager . %npm_package_productName% --out=dist --arch=all --platform=win32 --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/win/app.ico",
+    "build:win": "electron-packager . %npm_package_productName% --out=dist --arch=x64 --platform=win32 --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/win/app.ico",
+    "build:win32": "electron-packager . %npm_package_productName% --out=dist --arch=ia32 --platform=win32 --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/win/app.ico",
     "build:linux": "electron-packager . $npm_package_productName --out=dist --arch=all --platform=linux --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=$npm_package_electronVersion --app-version=$npm_package_version --icon=./assets/icons/png/64x64.png",
     "build:linuxwin": "electron-packager . %npm_package_productName% --out=dist --arch=all --platform=linux --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/png/64x64.png",
     "package": "npm run package:winall && npm run package:linux",
