--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "noImplicitAny": false,
         "allowJs": true,
         "outDir": "./out",
+        "rootDir": "./src/ts",
         "newLine": "LF",
         "checkJs": true
     },
