--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "electron": "^1.7.1",
     "electron-builder": "^17.3.1",
     "electron-installer-dmg": "^0.2.1",
+    "electron-local-crash-reporter": "^1.0.1",
     "electron-packager": "^8.7.0",
     "electron-prebuilt": "^1.4.13",
     "electron-rebuild": "^1.5.7"
