--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "build/main.js",
   "description": "MUD client coded in javascript.",
   "author": "Icewolfz",
-  "electronVersion": "1.7.2",
+  "electronVersion": "1.7.3",
   "email": "icewolfz@users.noreply.github.com",
   "license": "UNLICENSED",
   "repository": {
@@ -48,18 +48,20 @@
     "min": "./node_modules/.bin/babili --minified out -d build/js",
     "rebuild:win64": "./node_modules/.bin/electron-rebuild -f",
     "rebuild:win32": "./node_modules/.bin/electron-rebuild -a=ia32 -f",
-    "rebuild:linux": "./node_modules/.bin/electron-rebuild -l sqlite3 -p && ./node_modules/.bin/electron-rebuild -l sqlite3 -p -a=ia32 && ./node_modules/.bin/electron-rebuild -l sqlite3 -p -a=arm",
+    "rebuild:linux32": "./node_modules/.bin/electron-rebuild -a=ia32 -f",
+    "rebuild:linux64": "./node_modules/.bin/electron-rebuild -a=x64 -f",
+    "rebuild:linuxarm": "./node_modules/.bin/electron-rebuild -a=arm -f",
     "sass": "node-sass src/css/ -o build/css/ --output-style compressed",
     "compile:themes": "node-sass src/themes/ -o build/themes/ --output-style compressed"
   },
   "devDependencies": {
-    "@types/bootstrap": "^3.3.33",
-    "@types/jquery": "^2.0.42",
-    "@types/node": "^7.0.16",
+    "@types/bootstrap": "^3.3.34",
+    "@types/jquery": "^2.0.47",
+    "@types/node": "^7.0.31",
     "babel-cli": "^6.24.1",
-    "babili": "^0.1.2",
+    "babili": "^0.1.3",
     "devtron": "^1.4.0",
-    "electron": "^1.7.2",
+    "electron": "^1.7.3",
     "electron-builder": "^17.3.1",
     "electron-installer-dmg": "^0.2.1",
     "electron-local-crash-reporter": "^1.0.1",
