Update build steps to explain new split archs and add package split for tar files

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "package:linuxall": "package:linux && package:linux-other",
     "package:linuxb": "cd dist/ && tar -jcvf jiMUD_${npm_package_version}_Linux_x64.tar.bz2 jiMUD-linux-x64 && tar -jcvf jiMUD_${npm_package_version}_Linux_ia32.tar.bz2 jiMUD-linux-ia32 && tar -jcvf jiMUD_${npm_package_version}_Linux_armv7l.tar.bz2 jiMUD-linux-armv7l && cd ../",
     "package:linux": "cd dist/ && tar -Jcvf jiMUD_${npm_package_version}_Linux_x64.tar.xz jiMUD-linux-x64 && tar -Jcvf jiMUD_${npm_package_version}_Linux_ia32.tar.xz jiMUD-linux-ia32 && tar -Jcvf jiMUD_${npm_package_version}_Linux_armv7l.tar.xz jiMUD-linux-armv7l && cd ../",
+    "package:linux32": "cd dist/ && tar -Jcvf jiMUD_${npm_package_version}_Linux_ia32.tar.xz jiMUD-linux-ia32 && cd ../",
+    "package:linux64": "cd dist/ && tar -Jcvf jiMUD_${npm_package_version}_Linux_x64.tar.xz jiMUD-linux-x64 && cd ../",
+    "package:linuxarm": "cd dist/ && tar -Jcvf jiMUD_${npm_package_version}_Linux_armv7l.tar.xz jiMUD-linux-armv7l && cd ../",
     "package:linuxwin": "cd dist && \"C:\\Program Files\\7-Zip\\7z.exe\" a -r -mx9 jiMUD_%npm_package_version%_Linux_x64.7z jiMUD-linux-x64 && \"C:\\Program Files\\7-Zip\\7z.exe\" a -r -mx9 jiMUD_%npm_package_version%_Linux_ia32.7z jiMUD-linux-ia32 && \"C:\\Program Files\\7-Zip\\7z.exe\" a -r -mx9 jiMUD_%npm_package_version%_Linux_armv7l.7z jiMUD-linux-armv7l && cd ../",
     "package:linux-other": "npm run package:linux-other32 && npm run package:linux-other64 && npm run package:linux-otherarm",
     "package:linux-other32": "build --pd=dist/jiMUD-linux-ia32/ --l deb AppImage rpm --ia32",
