Move exported types to single file for easier importing with out having to import entire modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
         "./src/**/*.js",
         "./lib/**/*.js",
         "./_bak/**/*.js",
-        "./out/**/*.js"
+        "./out/**/*.js",
+        "./src/worker/**/*.*"
     ],
     "include": [
         "./src/**/*.ts"
