Restructure src folder and scripts to allow webworkers to allow multi threading

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,11 @@
         "sourceMap": false,
         "noImplicitAny": false,
         "allowJs": true,
-        "outDir": "./out",
-        "rootDir": "./src/ts",
+        "outDir": "./out/common",
+        "rootDirs": [
+            "./src/common",
+            "./src/workers"
+        ],
         "newLine": "LF",
         "checkJs": true
     },
