--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "start": "electron .",
     "debug": "electron . -d",
     "clean:dist": "rm -rf ./dist",
-    "compile": "npm run sass && npm run compile:themes && tsc -p . --listEmittedFiles && npm run min && echo Compile Done",
+    "compile": "npm run sass && npm run compile:themes && npm run compile:worker && npm run compile:common && npm run min && echo Compile Done",
+    "compile:common": "tsc -p . --listEmittedFiles",
+    "compile:worker": "tsc -p ./src/worker --listEmittedFiles",
     "build": "npm run build:win64 && npm run build:linux",
     "build:osx": "electron-packager . %npm_package_productName% --out=dist --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --overwrite --prune --asar --arch=all --platform=darwin --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/mac/app.icns",
     "build:win64": "electron-packager . %npm_package_productName% --out=dist --arch=x64 --platform=win32 --ignore=\"^/(out|dist|.vscode|_raw|_bak|src|_test)$\" --prune --asar --overwrite --electronVersion=%npm_package_electronVersion% --app-version=%npm_package_version% --icon=./assets/icons/win/app.ico",
@@ -45,7 +47,9 @@
     "package:linux-other32": "build --pd=dist/jiMUD-linux-ia32/ --l deb AppImage rpm --ia32",
     "package:linux-other64": "build --pd=dist/jiMUD-linux-x64/ --l deb AppImage rpm --x64",
     "package:linux-otherarm": "build --pd=dist/jiMUD-linux-armv7l/ --l deb AppImage rpm --armv7l",
-    "min": "./node_modules/.bin/babili --minified out -d build/js",
+    "min": "npm run min:common && npm run min:worker",
+    "min:common": "./node_modules/.bin/babili --minified out/common -d build/js",
+    "min:worker": "./node_modules/.bin/babili --minified out/worker -d build/js",
     "rebuild:win64": "./node_modules/.bin/electron-rebuild -f",
     "rebuild:win32": "./node_modules/.bin/electron-rebuild -a=ia32 -f",
     "rebuild:linux32": "./node_modules/.bin/electron-rebuild -a=ia32 -f",
