--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "package:linux-other32": "build --pd=dist/jiMUD-linux-ia32/ --l deb AppImage rpm --ia32",
     "package:linux-other64": "build --pd=dist/jiMUD-linux-x64/ --l deb AppImage rpm --x64",
     "package:linux-otherarm": "build --pd=dist/jiMUD-linux-armv7l/ --l deb AppImage rpm --armv7l",
-    "min": "npm run min:common && npm run min:worker",
+    "min": "./node_modules/.bin/babili --minified out -d build/js",
     "min:common": "./node_modules/.bin/babili --minified out/common -d build/js",
     "min:worker": "./node_modules/.bin/babili --minified out/worker -d build/js",
     "rebuild:win64": "./node_modules/.bin/electron-rebuild -f",
