--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "buzz": "^1.2.0",
     "jquery": "^3.1.1",
     "lz-string": "^1.4.4",
+    "moment": "^2.18.1",
     "rgbcolor": "^1.0.0",
     "spellchecker": "^3.3.1",
     "sqlite3": "^3.1.8"
