Add drag and drop support to local and remote immortal tools

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "buzz": "^1.2.0",
     "chokidar": "^1.7.0",
     "drivelist": "^5.0.22",
+    "fs-extra": "^3.0.1",
     "jquery": "^3.1.1",
     "lz-string": "^1.4.4",
     "moment": "^2.18.1",
