force windows rebuild into paralle mode

--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
     "min": "./node_modules/.bin/babili --minified out -d build/js",
     "min:common": "./node_modules/.bin/babili --minified out/common -d build/js",
     "min:worker": "./node_modules/.bin/babili --minified out/worker -d build/js",
-    "rebuild:win64": "./node_modules/.bin/electron-rebuild -f",
-    "rebuild:win32": "./node_modules/.bin/electron-rebuild -a=ia32 -f",
-    "rebuild:linux32": "./node_modules/.bin/electron-rebuild -a=ia32 -f",
-    "rebuild:linux64": "./node_modules/.bin/electron-rebuild -a=x64 -f",
-    "rebuild:linuxarm": "./node_modules/.bin/electron-rebuild -a=arm -f",
+    "rebuild:win64": "./node_modules/.bin/electron-rebuild -f -p",
+    "rebuild:win32": "./node_modules/.bin/electron-rebuild -a=ia32 -f -p",
+    "rebuild:linux32": "./node_modules/.bin/electron-rebuild -a=ia32 -f -p",
+    "rebuild:linux64": "./node_modules/.bin/electron-rebuild -a=x64 -f -p",
+    "rebuild:linuxarm": "./node_modules/.bin/electron-rebuild -a=arm -f -p",
     "sass": "node-sass src/css/ -o build/css/ --output-style compressed",
     "compile:themes": "node-sass src/themes/ -o build/themes/ --output-style compressed"
   },
