--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "buzz": "^1.2.0",
     "chokidar": "^1.7.0",
     "drivelist": "^5.0.22",
+    "font-manager": "^0.2.2",
     "fs-extra": "^3.0.1",
     "jquery": "^3.1.1",
     "lz-string": "^1.4.4",
